--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="assets/icon.png" sizes="256x256" type="image/png"/>
 
     <!-- VENDOR SCRIPTS -->
-    <script src="vendor/jspdf.debug.js"></script>
+    <script src="vendor/jspdf.min.js"></script>
 </head>
 
 <body>
