started actual procgen stuff
currently just file suits + point values

--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
 
     <!-- CLIENT SCRIPTS -->
     <script src="client/index.js" async></script>
+    <script src="client/words.js" async></script>
 </body>
