init happends on window load instead of at the end of the script
also removed async from scrip tags

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <iframe id="pdf-preview" type="application/pdf" width="50%" height="50%" frameborder="0" src=""></iframe>
 
     <!-- CLIENT SCRIPTS -->
-    <script src="client/index.js" async></script>
-    <script src="client/words.js" async></script>
+    <script src="client/words.js"></script>
+    <script src="client/index.js"></script>
 </body>
