PDF opens in new tab/window instead of trying to save automatically
less intrusive to let people decide how they want to handle it from
there

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <dl id="status">
             <dt>Status:</dt>
         </dl>
-        <button id="btnRules" onclick="printRules();">Save Rules</button>
-        <button id="btnPng"   onclick="printPng();">Save Game PNG</button>
-        <button id="btnPdf"   onclick="printPdf();">Save Game PDF</button>
+        <button id="btnRules"   onclick="printRules();">Print Rules</button>
+        <button id="btnPng"     onclick="printPng();">Get Gameset (PNG)</button>
+        <button id="btnPdf"     onclick="printPdf();">Get Gameset (PDF)</button>
     </section>
     <section id="rules">
         <h1>ProcJam/GitHub Game-off 2016 entry</h1>
