--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button id="btnRules"   onclick="printRules();">Print Rules</button>
         <button id="btnPng"     onclick="printPng();">Get Gameset (PNG)</button>
         <button id="btnPdf"     onclick="printPdf();">Get Gameset (PDF)</button>
+        <button id="btnRefresh" onclick="window.location.reload();">Generate New Gameset</button>
     </section>
     <section id="rules">
         <h1>ProcJam/GitHub Game-off 2016 entry</h1>
