--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 </head>
 
 <body>
-
+    <section id="description">
+        <h1>ProcJam/GitHub Game-off 2016 entry (replace this with title when we have one)</h1>
+        <p>replace this with a blurb describing the game's premise</p>
+    </section>
     <section id="ui">
         <dl id="status">
-            <dt>Status:</dt>
+            <dt>Gameset Status:</dt>
         </dl>
         <button id="btnRules"   onclick="printRules();">Print Rules</button>
-        <button id="btnPng"     onclick="printPng();">Get Gameset (PNG)</button>
-        <button id="btnPdf"     onclick="printPdf();">Get Gameset (PDF)</button>
-        <button id="btnRefresh" onclick="window.location.reload();">Generate New Gameset</button>
+        <button id="btnPng"     onclick="printPng();" disabled>Get Gameset (PNG)</button>
+        <button id="btnPdf"     onclick="printPdf();" disabled>Get Gameset (PDF)</button>
+        <button id="btnRefresh" onclick="window.location.reload();" disabled>Generate New Gameset</button>
     </section>
     <section id="rules">
-        <h1>ProcJam/GitHub Game-off 2016 entry</h1>
-        
         <h1>How To Play</h1>
         <h2>Setup</h2>
         <ol>
