all buttons popup print dialogs

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <dt>Gameset Status:</dt>
         </dl>
         <button id="btnRules"   onclick="printRules();">Print Rules</button>
-        <button id="btnPng"     onclick="printPng();" disabled>Get Gameset (PNG)</button>
-        <button id="btnPdf"     onclick="printPdf();" disabled>Get Gameset (PDF)</button>
+        <button id="btnPng"     onclick="printPng();" disabled>Print Gameset (PNG)</button>
+        <button id="btnPdf"     onclick="printPdf();" disabled>Print Gameset (PDF)</button>
         <button id="btnRefresh" onclick="window.location.reload();" disabled>Generate New Gameset</button>
     </section>
     <section id="rules">
