--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Generate, print, and cut up a game page.</li>
             <li>Shuffle character cards and have each player choose one randomly. Look at your own, but keep these secret from other players until the end of the game.</li>
             <li>Shuffle the file cards and place the deck facedown by the board.</li>
-            <li>Shuffle the ability cards and place the deck facedown by the board.</li>
+            <li>Shuffle the program cards and place the deck facedown by the board.</li>
             <li>Place an avatar token for each player on the "start" positions on the board.</li>
             <li>Decide who goes first.</li>
         </ol>
@@ -50,13 +50,13 @@
                 Actions:
                 <ul>
                     <li>Move your avatar 1 space</li>
-                    <li>Draw an ability card facedown</li>
-                    <li>Use an ability card
+                    <li>Draw an program card facedown</li>
+                    <li>Use an program card
                     <li>If on the node, draw a file faceup</li>
                 </ul>
             </li>
             <li>Once a player has used both of their actions, the next player starts their turn.</li>
-            <li>When ability cards are used, they are taken out of the game (don't put them back in the ability deck).</li>
+            <li>When program cards are used, they are taken out of the game (don't put them back in the program deck).</li>
         </ul>
 
         <h2>Game Over</h2>
@@ -73,8 +73,8 @@
         
         <h2>Misc.</h2>
         <ul>
-            <li>You can move forwards or backwards. For example: if a player uses the ability "target player moves up to 2 spaces", they could A) target themselves and move forwards, or B) target another player and move them backwards.</li>
-            <li>You can choose to do the same action twice on your turn. For example, you could draw two ability cards.</li>
+            <li>You can move forwards or backwards. For example: if a player uses the program "target player moves up to 2 spaces", they could A) target themselves and move forwards, or B) target another player and move them backwards.</li>
+            <li>You can choose to do the same action twice on your turn. For example, you could draw two program cards.</li>
         </ul>
 
         <h1>Libraries Used</h1>
