--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
     <meta charset="utf-8">
-    <title>ProcJam/GitHub Game-Off 2016</title>
+    <title>server.hack()</title>
    
     <link rel="stylesheet" type="text/css" href="assets/style.css"/>
     <link rel="icon" href="assets/icon.png" sizes="256x256" type="image/png"/>
@@ -12,8 +12,9 @@
 
 <body>
     <section id="description">
-        <h1>ProcJam/GitHub Game-off 2016 entry (replace this with title when we have one)</h1>
-        <p>replace this with a blurb describing the game's premise</p>
+        <h1>server.hack()</h1>
+        <p>a cyberpunk board game for 2-4 players</p>
+        <p>made for <a href="https://itch.io/jam/procjam">PROCJAM 2016</a> and <a href="https://github.com/github/game-off-2016">GitHub Game-off 2016</a></p>
     </section>
     <section id="ui">
         <dl id="status">
@@ -52,7 +53,7 @@
                     <li>Move your avatar 1 space</li>
                     <li>Draw an program card facedown</li>
                     <li>Use an program card
-                    <li>If on the node, draw a file faceup</li>
+                    <li>If on the server, draw a file faceup</li>
                 </ul>
             </li>
             <li>Once a player has used both of their actions, the next player starts their turn.</li>
