links open in new tab

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="description">
         <h1>server.hack()</h1>
         <p>a cyberpunk board game for 2-4 players</p>
-        <p>made for <a href="https://itch.io/jam/procjam">PROCJAM 2016</a> and <a href="https://github.com/github/game-off-2016">GitHub Game-off 2016</a></p>
+        <p>made for <a href="https://itch.io/jam/procjam" target="_blank">PROCJAM 2016</a> and <a href="https://github.com/github/game-off-2016" target="_blank">GitHub Game-off 2016</a></p>
     </section>
     <section id="ui">
         <dl id="status">
@@ -80,7 +80,7 @@
 
         <h1>Libraries Used</h1>
         <ul>
-            <li><a href="https://github.com/MrRio/jsPDF">jsPDF</a></li>
+            <li><a href="https://github.com/MrRio/jsPDF" target="_blank">jsPDF</a></li>
         </ul> 
     </section>
     <section id="main">
