added "single-page" to description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section id="description">
         <h1>server.hack()</h1>
-        <p>a cyberpunk board game for 2-4 players</p>
+        <p>a single-page cyberpunk board game for 2-4 players</p>
         <p>made for <a href="https://itch.io/jam/procjam" target="_blank">PROCJAM 2016</a> and <a href="https://github.com/github/game-off-2016" target="_blank">GitHub Game-off 2016</a></p>
     </section>
     <section id="ui">
