--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <h1>How To Play</h1>
         <h2>Setup</h2>
         <ol>
-            <li>Generate, print, and cut up a game page.</li>
+            <li>Print a gameset.</li>
+            <li>Cut the gameset into individual pieces.</li>
             <li>Shuffle character cards and have each player choose one randomly. Look at your own, but keep these secret from other players until the end of the game.</li>
             <li>Shuffle the file cards and place the deck facedown by the board.</li>
             <li>Shuffle the program cards and place the deck facedown by the board.</li>
@@ -57,7 +58,7 @@
                 </ul>
             </li>
             <li>Once a player has used both of their actions, the next player starts their turn.</li>
-            <li>When program cards are used, they are taken out of the game (don't put them back in the program deck).</li>
+            <li>When program cards are used, place them in a separate pile. Once every program card has been drawn, re-shuffle this pile and use it as the new program deck.</li>
         </ul>
 
         <h2>Game Over</h2>
@@ -82,6 +83,25 @@
         <ul>
             <li><a href="https://github.com/MrRio/jsPDF" target="_blank">jsPDF</a></li>
         </ul> 
+    </section>
+    <section id="details">
+        <h1>Gameset Details</h1>
+        <p>A full gameset is fitted to a single letter-sized piece of paper, which needs to be cut into individual pieces.</p>
+        <img src="example-gameset.png" alt="example gameset" title="example gameset" width="319" height="413"/>
+        <p>When finished cutting, you should have:
+            <ul>
+                <li>4 character cards</li>
+                <li>20 file cards</li>
+                <li>30 program cards</li>
+                <li>1 game board</li>
+                <li>4 avatar tokens</li>
+            </ul>
+        </p>
+        <p>The avatar tokens on the corners of the game board are simple papercrafts, and can be assembled like so:</p>
+        <img src="avatar-instructions.png" alt="instructions on how to assemble avatar tokens" title="instructions on how to assemble avatar tokens" width="500" height="200"/>
+        <p>If you prefer, you can cut out and use the center squares alone to save some setup time.</p>
+        <p>An example of an entire assembled gameset can be seen below:</p>
+        <img src="example-assembled-gameset.png" alt="example assembled gameset" title="example assembled gameset" width="500" height="200"/>
     </section>
     <section id="main">
         <canvas id="canvas"></canvas>
