added wikimedia commons photo credits

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
             <li>You can choose to do the same action twice on your turn. For example, you could draw two program cards.</li>
         </ul>
 
-        <h1>Libraries Used</h1>
+        <h1>Resources Used</h1>
         <ul>
             <li><a href="https://github.com/MrRio/jsPDF" target="_blank">jsPDF</a></li>
+            <li><a href="photo credits.txt" target="_blank">Wikimedia Commons stock photos</a></li>
         </ul> 
     </section>
     <section id="details">
