added an objective to the rules

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <hr/>
     <section id="rules">
         <h1>How To Play</h1>
+
+        <h2>Objective</h2>
+            <p>Finish the game with the highest number of File points.</p>
         <h2>Setup</h2>
         <ol>
             <li>Print a gameset.</li>
