--- a/index.html
+++ b/index.html
@@ -32,23 +32,26 @@
 
         <h2>Objective</h2>
             <p>Finish the game with the highest number of File points.</p>
+
+        <h2>Pieces</h2>
+        <ul>
+            <li>Character cards have a set of 1-3 implants/traits which affect their final score.</li>
+            <li>File cards have a point value (0-3) and one of three filetypes. Once drawn, a File remains face-up for the rest of the game.</li>
+            <li>Program cards have text which explains what they do.</li>
+            <li>The Gameboard has a Server (the center of the board) and four paths leading to the Server.</li>
+            <li>The Avatar tokens are cubes used to represent player position on the Gameboard.</li>
+        </ul>
+
         <h2>Setup</h2>
         <ol>
             <li>Print a gameset.</li>
             <li>Cut the gameset into individual pieces.</li>
-            <li>Shuffle character cards and have each player choose one randomly. Look at your own, but keep these secret from other players until the end of the game.</li>
-            <li>Shuffle the file cards and place the deck facedown by the board.</li>
-            <li>Shuffle the program cards and place the deck facedown by the board.</li>
-            <li>Place an avatar token for each player on the "start" positions on the board.</li>
+            <li>Shuffle Character cards and have each player choose one randomly. Look at your own, but keep these secret from other players until the end of the game.</li>
+            <li>Shuffle the File cards and place the deck facedown by the Gameboard.</li>
+            <li>Shuffle the Program cards and place the deck facedown by the Gameboard.</li>
+            <li>Place an avatar token for each player on the "start" positions on the Gameboard.</li>
             <li>Decide who goes first.</li>
         </ol>
-
-        <h2>Cards</h2>
-        <ul>
-            <li>Characters have a set of 1-3 implants/traits which affect their final score.</li>
-            <li>Files have a point value (0-3) and one of three filetypes. Once drawn, a file remains face-up for the rest of the game.</li>
-            <li>Abilities have text which explains what they do.</li>
-        </ul>
 
         <h2>Playing</h2>
         <ul>
@@ -56,31 +59,32 @@
             <li>
                 Actions:
                 <ul>
-                    <li>Move your avatar 1 space</li>
-                    <li>Draw an program card facedown</li>
-                    <li>Use an program card
-                    <li>If on the server, draw a file faceup</li>
+                    <li>Move your Avatar 1 space</li>
+                    <li>Draw a Program card facedown</li>
+                    <li>Use a Program card</li>
+                    <li>If on the Server, draw a File faceup</li>
                 </ul>
             </li>
             <li>Once a player has used both of their actions, the next player starts their turn.</li>
-            <li>When program cards are used, place them in a separate pile. Once every program card has been drawn, re-shuffle this pile and use it as the new program deck.</li>
+            <li>When Programs are used, place the cards in a separate pile. Once every Program card has been drawn, re-shuffle this pile and use it as the new Program deck.</li>
         </ul>
 
         <h2>Game Over</h2>
         <ul>
-            <li>As soon as the last file is drawn, the game is over. Each player reveals their character card, and points are tallied. You may not use any remaining abilities.
-            <li>A player's points are calculated as the sum of all the files they hold, plus any bonuses/modifiers from their character card.
+            <li>As soon as the last File is drawn, the game is over. Each player reveals their Character card, and points are tallied. You may not use any remaining Programs.
+            <li>A player's points are calculated as the sum of all the Files they hold, plus any bonuses/modifiers from their Character card.
         </ul>
 
         <h2>Ties</h2>
         <ul>
-            <li>If two or more players are tied for first place, continue the game by drawing/playing abilities until the tie is broken.
+            <li>If two or more players are tied for first place, continue the game by drawing/playing Programs until the tie is broken.</li>
         </ul>
         
         <h2>Misc.</h2>
         <ul>
-            <li>You can move forwards or backwards. For example: if a player uses the program "target player moves up to 2 spaces", they could A) target themselves and move forwards, or B) target another player and move them backwards.</li>
-            <li>You can choose to do the same action twice on your turn. For example, you could draw two program cards.</li>
+            <li>You can move forwards or backwards. For example: if a player uses the Program "target player moves up to 2 spaces", they could A) target themselves and move forwards, or B) target another player and move them backwards.</li>
+            <li>You can choose to do the same action twice on your turn. For example, you could draw two Program cards.</li>
+            <li>If multiple people need to draw cards at the same time (e.g. the Program "everyone draw 3 cards"), start with the player who used the Program and continue in turn order.</li>
         </ul>
 
     </section>
@@ -96,17 +100,17 @@
                 <td>
                     <p>When finished cutting, you should have:
                     <ul>
-                        <li>4 character cards</li>
-                        <li>20 file cards</li>
-                        <li>30 program cards</li>
-                        <li>1 game board</li>
-                        <li>4 avatar tokens</li>
+                        <li>4 Character cards</li>
+                        <li>20 File cards</li>
+                        <li>30 Program cards</li>
+                        <li>1 Gameboard</li>
+                        <li>4 Avatar tokens</li>
                     </ul>
                     </p>
                 </td>
             </tr>
         </table>
-        <p>The avatar tokens on the corners of the game board are simple papercrafts, and can be assembled like so:</p>
+        <p>The Avatar tokens on the corners of the Gameboard are simple papercrafts, and can be assembled like so:</p>
         <img src="avatar-instructions.png" alt="instructions on how to assemble avatar tokens" title="instructions on how to assemble avatar tokens" width="500" height="200"/>
         <p>If you prefer, you can cut out and use the center squares alone to save some setup time.</p>
         <p>An example of an entire assembled gameset can be seen below:</p>
