--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <ul>
             <li>You can move forwards or backwards. For example: if a player uses the Program "target player moves up to 2 spaces", they could A) target themselves and move forwards, or B) target another player and move them backwards.</li>
             <li>You can choose to do the same action twice on your turn. For example, you could draw two Program cards.</li>
-            <li>If multiple people need to draw cards at the same time (e.g. the Program "everyone draw 3 cards"), start with the player who used the Program and continue in turn order.</li>
+            <li>If multiple players need to draw cards at the same time (e.g. the Program "everyone draw 3 cards"), start with the player who used the Program and continue in turn order.</li>
         </ul>
 
     </section>
