--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <tr>
                 <td><img src="example-gameset.png" alt="example gameset" title="example gameset" width="319" height="413"/></td>
                 <td>
-                    <p>When finished cutting, you should have:
+                    <p>When finished cutting, you should have:</p>
                     <ul>
                         <li>4 Character cards</li>
                         <li>20 File cards</li>
@@ -106,7 +106,6 @@
                         <li>1 Gameboard</li>
                         <li>4 Avatar tokens</li>
                     </ul>
-                    </p>
                 </td>
             </tr>
         </table>
