removed print lines + added space

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="vendor/jspdf.min.js"></script>
 </head>
 
-<body onload="document.body.innerHTML += document.body.innerHTML;">
+<body onload="document.body.innerHTML += '<br><br><br><br><br><br>' + document.body.innerHTML;">
     <section id="description">
         <h1 style="margin-top:0;">server.hack(): a single-page cyberpunk board game for 2-4 players</h1>
         <p><a href="https://sweetheartsquad.itch.io/server-hack">sweetheartsquad.itch.io/server-hack</a></p>
@@ -30,8 +30,6 @@
 
         <h2>Setup</h2>
         <ol>
-            <li>Print a gameset</li>
-            <li>Cut the gameset into individual pieces</li>
             <li>Shuffle Characters and distribute; look at your own, but keep these secret from other players until the end of the game</li>
             <li>Shuffle Files and place deck facedown</li>
             <li>Shuffle Programs and place deck facedown</li>
@@ -62,5 +60,4 @@
             <li>If multiple players need to draw cards at the same time (e.g. the Program "everyone draw 3 cards") start with the player who used the Program and continue in turn order</li>
         </ul>
     <sub>Resources Used: jsPDF, Wikimedia Commons stock photos</sub>
-    <br>
 </body>
